Implement simple navigation bar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,11 @@
-<p>
-  navbar works!
-</p>
+
+<nav>
+  <a routerLink="/"><img src="" alt="logo"></a>
+  <ul>
+    <li><a routerLink="/">Strona główna</a></li>
+    <li><a routerLink="/news">Aktualności</a></li>
+    <li><a routerLink="/about">O nas</a></li>
+    <li><a routerLink="/gallery">Galeria</a></li>
+    <li><a routerLink="/contact">Kontakt</a></li>
+  </ul>
+</nav>
