--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
-<p>
-  home works!
-</p>
+<app-newspreview></app-newspreview>
+<app-gallerypreview></app-gallerypreview>
+<app-aboutpreview></app-aboutpreview>
