--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,3 +1,8 @@
-<p>
-  news woks!
-</p>
+<ul *ngFor="let title of titles; let i = index">
+  <li>
+    <section>
+      <h4>{{ title }}</h4>
+    </section>
+    <p>{{ news[i] }}</p>
+  </li>
+</ul>
