--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,7 @@
-
 <nav>
-  <a routerLink="/"><img src="" alt="logo"></a>
+  <a routerLink="/"
+    ><img src="../../assets/img/jaku_logo.svg" width="30%" alt="logo"
+  /></a>
   <ul>
     <li><a routerLink="/">Strona główna</a></li>
     <li><a routerLink="/news">Aktualności</a></li>
