--- a/src/app/subgallery/subgallery.component.html
+++ b/src/app/subgallery/subgallery.component.html
@@ -1,4 +1,4 @@
-<p> {{ _title }} </p>
-<ul *ngFor = 'let picture of imagesUrls'>
-  <li><img src="{{ picture }}" alt= 'picture' ></li>
+<h3>{{ galleryTitle }}</h3>
+<ul *ngFor="let picture of imageUrls">
+  <li><img src="{{ picture }}" alt="picture" /></li>
 </ul>
