Change project styling type to scss Add bootstrap to project Style subgallery component with bootstrap carousel

--- a/src/app/subgallery/subgallery.component.html
+++ b/src/app/subgallery/subgallery.component.html
@@ -1,4 +1,10 @@
-<h3>{{ galleryTitle }}</h3>
-<ul *ngFor="let picture of imageUrls">
-  <li><img src="{{ picture }}" alt="picture" /></li>
-</ul>
+<carousel>
+  <h3>{{ galleryTitle }}</h3>
+  <slide *ngFor="let picture of imageUrls">
+    <img
+      src="{{ picture }}"
+      alt="picture"
+      style="display: block; width: 100%;"
+    />
+  </slide>
+</carousel>
