--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,20 @@
-<nav>
-  <a routerLink="/"
-    ><img src="../../assets/img/jaku_logo.svg" width="30%" alt="logo"
-  /></a>
-  <ul>
-    <li><a routerLink="/">Strona główna</a></li>
-    <li><a routerLink="/news">Aktualności</a></li>
-    <li><a routerLink="/about">O nas</a></li>
-    <li><a routerLink="/gallery">Galeria</a></li>
-    <li><a routerLink="/contact">Kontakt</a></li>
-  </ul>
+<nav class="d-flex justify-content-center">
+  <a class="align-self-center" routerLink="/">
+    <img src="../../assets/img/jaku_logo.svg" width="30%" alt="logo" />
+  </a>
+  <span class="btn btn-primary align-self-center" routerLink="/"
+    >Strona główna</span
+  >
+  <span class="btn btn-primary align-self-center" routerLink="/news"
+    >Aktualności</span
+  >
+  <span class="btn btn-primary align-self-center" routerLink="/about"
+    >O nas</span
+  >
+  <span class="btn btn-primary align-self-center" routerLink="/gallery"
+    >Galeria</span
+  >
+  <span class="btn btn-primary align-self-center" routerLink="/contact"
+    >Kontakt</span
+  >
 </nav>
