--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 @import "variables";
 @import "../node_modules/bootstrap/scss/bootstrap";
+
+body {
+  nav {
+    img {
+      height: 10em;
+      width: 10em;
+    }
+
+    .btn {
+      margin: 1%;
+      height: 3em;
+      width: 15em;
+    }
+  }
+}
