Add responsive styling

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,20 +1,20 @@
 <nav class="d-flex justify-content-center">
   <a class="align-self-center" routerLink="/">
-    <img src="../../assets/img/jaku_logo.svg" width="30%" alt="logo" />
+    <img class="w-100" src="../../assets/img/jaku_logo.svg" alt="logo" />
   </a>
-  <span class="btn btn-primary align-self-center" routerLink="/"
-    >Strona główna</span
+  <span class="btn btn-primary align-self-center  m-1" routerLink="/"
+    >Główna</span
   >
-  <span class="btn btn-primary align-self-center" routerLink="/news"
+  <span class="btn btn-primary align-self-center  m-1" routerLink="/news"
     >Aktualności</span
   >
-  <span class="btn btn-primary align-self-center" routerLink="/about"
+  <span class="btn btn-primary align-self-center  m-1" routerLink="/about"
     >O nas</span
   >
-  <span class="btn btn-primary align-self-center" routerLink="/gallery"
+  <span class="btn btn-primary align-self-center  m-1" routerLink="/gallery"
     >Galeria</span
   >
-  <span class="btn btn-primary align-self-center" routerLink="/contact"
+  <span class="btn btn-primary align-self-center  m-1" routerLink="/contact"
     >Kontakt</span
   >
 </nav>
