--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-navbar class="d-flex justify-content-center"></app-navbar>
 <router-outlet></router-outlet>
-<app-footer></app-footer>
+<app-footer class="footer"></app-footer>
