--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,12 +9,22 @@ html {
   height: 100%;
 
   body {
+    position: relative;
     background-color: rgba(200, 240, 220, 0.4);
     min-height: 100%;
     nav {
       span {
         min-width: 15%;
       }
+    }
+
+    .footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 60px;
+      line-height: 60px;
+      background-color: greenyellow;
     }
   }
 }
