Add regulations component to routing

--- a/src/app/regulations/regulations.component.html
+++ b/src/app/regulations/regulations.component.html
@@ -1,3 +1,99 @@
-<p>
-  regulations works!
-</p>
+<article>
+  <h1>REGULAMIN SERWISU INTERNETOWEGO FUNDACJI ANNY DYMNEJ „MIMO WSZYSTKO”</h1>
+  <section>
+    <h3>I. Postanowienia ogólne</h3>
+    <p>
+      Serwis internetowy działający pod głównym adresem „www.mimowszystko.org”,
+      zwany dalej „Serwisem” prowadzony jest przez Fundację Anny Dymnej „Mimo
+      wszystko”, z siedzibą w Krakowie przy ul. Myczkowskiego 4, 30-198 Kraków,
+      zarejestrowaną w rejestrze stowarzyszeń, innych organizacji społecznych i
+      zawodowych, fundacji oraz publicznych zakładów opieki zdrowotnej Krajowego
+      Rejestru Sądowego przez Sąd Rejonowy dla Krakowa-Śródmieścia w Krakowie,
+      XI Wydział Gospodarczy – KRS, pod numerem: 0000174486, zwaną dalej
+      Fundacją. Niniejszy regulamin, zwany dalej „Regulaminem”, określa warunki
+      korzystania z Serwisu.
+    </p>
+    <p>
+      Zadaniem Serwisu jest prezentacja informacji o działalności Fundacji oraz
+      bieżących projektach organizowanych przez Fundację.
+    </p>
+    <p>Serwis umożliwia ponadto:</p>
+    <ul>
+      <li>
+        wsparcie działalności Fundacji poprzez dokonanie płatności online;
+      </li>
+      <li>
+        zapis do usługi newslettera prowadzonego za pośrednictwem wiadomości
+        e-mail;
+      </li>
+      <li>
+        wsparcie działalności Fundacji poprzez dokonanie płatności online;
+      </li>
+      <li>logowanie do subkonta</li>
+    </ul>
+  </section>
+  <section>
+    <h3>I. Postanowienia ogólne</h3>
+    <p>
+      Serwis internetowy działający pod głównym adresem „www.mimowszystko.org”,
+      zwany dalej „Serwisem” prowadzony jest przez Fundację Anny Dymnej „Mimo
+      wszystko”, z siedzibą w Krakowie przy ul. Myczkowskiego 4, 30-198 Kraków,
+      zarejestrowaną w rejestrze stowarzyszeń, innych organizacji społecznych i
+      zawodowych, fundacji oraz publicznych zakładów opieki zdrowotnej Krajowego
+      Rejestru Sądowego przez Sąd Rejonowy dla Krakowa-Śródmieścia w Krakowie,
+      XI Wydział Gospodarczy – KRS, pod numerem: 0000174486, zwaną dalej
+      Fundacją. Niniejszy regulamin, zwany dalej „Regulaminem”, określa warunki
+      korzystania z Serwisu.
+    </p>
+    <p>
+      Zadaniem Serwisu jest prezentacja informacji o działalności Fundacji oraz
+      bieżących projektach organizowanych przez Fundację.
+    </p>
+    <p>Serwis umożliwia ponadto:</p>
+    <ul>
+      <li>
+        wsparcie działalności Fundacji poprzez dokonanie płatności online;
+      </li>
+      <li>
+        zapis do usługi newslettera prowadzonego za pośrednictwem wiadomości
+        e-mail;
+      </li>
+      <li>
+        wsparcie działalności Fundacji poprzez dokonanie płatności online;
+      </li>
+      <li>logowanie do subkonta</li>
+    </ul>
+  </section>
+  <section>
+    <h3>I. Postanowienia ogólne</h3>
+    <p>
+      Serwis internetowy działający pod głównym adresem „www.mimowszystko.org”,
+      zwany dalej „Serwisem” prowadzony jest przez Fundację Anny Dymnej „Mimo
+      wszystko”, z siedzibą w Krakowie przy ul. Myczkowskiego 4, 30-198 Kraków,
+      zarejestrowaną w rejestrze stowarzyszeń, innych organizacji społecznych i
+      zawodowych, fundacji oraz publicznych zakładów opieki zdrowotnej Krajowego
+      Rejestru Sądowego przez Sąd Rejonowy dla Krakowa-Śródmieścia w Krakowie,
+      XI Wydział Gospodarczy – KRS, pod numerem: 0000174486, zwaną dalej
+      Fundacją. Niniejszy regulamin, zwany dalej „Regulaminem”, określa warunki
+      korzystania z Serwisu.
+    </p>
+    <p>
+      Zadaniem Serwisu jest prezentacja informacji o działalności Fundacji oraz
+      bieżących projektach organizowanych przez Fundację.
+    </p>
+    <p>Serwis umożliwia ponadto:</p>
+    <ul>
+      <li>
+        wsparcie działalności Fundacji poprzez dokonanie płatności online;
+      </li>
+      <li>
+        zapis do usługi newslettera prowadzonego za pośrednictwem wiadomości
+        e-mail;
+      </li>
+      <li>
+        wsparcie działalności Fundacji poprzez dokonanie płatności online;
+      </li>
+      <li>logowanie do subkonta</li>
+    </ul>
+  </section>
+</article>
