--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <nav class="d-flex justify-content-around">
-  <span>Regulamin</span>
+  <span routerLink="/regulations">Regulamin</span>
   <span routerLink="/about">Nasz zespół</span>
   <span routerLink="/contact">Kontakt</span>
   <a href="https://pl-pl.facebook.com/tosamozdjecielindycodziennie/">FB</a>
