--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@ html {
 
   body {
     position: relative;
+    padding-bottom: 60px;
     background-color: rgba(200, 240, 220, 0.4);
     min-height: 100%;
     nav {
@@ -19,8 +20,6 @@ html {
     }
 
     .footer {
-      position: absolute;
-      bottom: 0;
       width: 100%;
       height: 60px;
       line-height: 60px;
