--- a/src/app/subgallery/subgallery.component.html
+++ b/src/app/subgallery/subgallery.component.html
@@ -1,10 +1,10 @@
-<carousel>
+<carousel class="container d-flex justify-content-center">
   <h3>{{ galleryTitle }}</h3>
-  <slide *ngFor="let picture of imageUrls">
+  <slide class="row" *ngFor="let picture of imageUrls">
     <img
+      class="w-100 col align-self-center"
       src="{{ picture }}"
       alt="picture"
-      style="display: block; width: 100%;"
     />
   </slide>
 </carousel>
