Add spacing between galleries and titles within galleries

--- a/src/app/subgallery/subgallery.component.html
+++ b/src/app/subgallery/subgallery.component.html
@@ -1,5 +1,5 @@
-<carousel class="container d-flex justify-content-center">
-  <h3>{{ galleryTitle }}</h3>
+<carousel class="container my-5 d-flex justify-content-center">
+  <h2 class="mb-3">{{ galleryTitle }}</h2>
   <slide class="row" *ngFor="let picture of imageUrls">
     <img class="col align-self-center" src="{{ picture }}" alt="picture" />
   </slide>
