--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,7 +1,10 @@
-<ul *ngFor="let info of news">
-  <li>
-    <h4>{{ info.date }}</h4>
-    <h3>{{ info.title }}</h3>
-    <p>{{ info.content }}</p>
-  </li>
-</ul>
+<div class="container justify-content-center p-5">
+  <ul class="list-unstyled" *ngFor="let info of news">
+    <li class="mb-5">
+      <h5 class="text-secondary">{{ info.date }}</h5>
+      <h2>{{ info.title }}</h2>
+      <p class="my-4">{{ info.content }}</p>
+      <hr />
+    </li>
+  </ul>
+</div>
