Add pagination to news

--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,11 +1,15 @@
-<div class="container justify-content-center p-5">
-  <ul class="list-unstyled" *ngFor="let info of news">
-    <li class="mb-5">
+<div class="p-5">
+  <div class="content-wrapper p5">
+    <div class="content-item mb-5" *ngFor="let info of currentNews">
       <h5 class="text-secondary">{{ info.date }}</h5>
       <h2>{{ info.title }}</h2>
       <p class="my-4">{{ info.content }}</p>
       <hr />
-    </li>
-  </ul>
-  <pagination [totalItems]="30"></pagination>
+    </div>
+  </div>
+  <pagination
+    class="justify-content-center"
+    [totalItems]="news.length"
+    (pageChanged)="pageChanged($event)"
+  ></pagination>
 </div>
