--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -10,6 +10,7 @@
   <pagination
     class="justify-content-center"
     [totalItems]="news.length"
+    [itemsPerPage]="3"
     (pageChanged)="pageChanged($event)"
   ></pagination>
 </div>
