--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,2 +1,16 @@
-<app-subgallery *ngFor="let gallery of galleries" [gallery]="gallery">
-</app-subgallery>
+<div class="p-5">
+  <div class="content-wrapper p5">
+    <app-subgallery
+      class="content-item mb-5"
+      *ngFor="let gallery of galleries"
+      [gallery]="gallery"
+    >
+    </app-subgallery>
+  </div>
+  <pagination
+    class="justify-content-center"
+    [totalItems]="galleries.length"
+    [itemsPerPage]="2"
+    (pageChanged)="pageChanged($event)"
+  ></pagination>
+</div>
