--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,16 +1,14 @@
 <div class="p-5">
   <div class="content-wrapper p5">
-    <app-subgallery
-      class="content-item mb-5"
-      *ngFor="let gallery of galleries"
-      [gallery]="gallery"
-    >
-    </app-subgallery>
+    <div class="content-item mb-5" *ngFor="let gallery of currentGalleries">
+      <app-subgallery [gallery]="gallery"></app-subgallery>
+      <hr />
+    </div>
   </div>
   <pagination
     class="justify-content-center"
     [totalItems]="galleries.length"
     [itemsPerPage]="2"
-    (pageChanged)="pageChanged($event)"
+    (pageChanged)="pageChange($event)"
   ></pagination>
 </div>
