Change pageChanged methods names

--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -9,6 +9,6 @@
     class="justify-content-center"
     [totalItems]="galleries.length"
     [itemsPerPage]="2"
-    (pageChanged)="pageChange($event)"
+    (pageChanged)="galleryPageChanged($event)"
   ></pagination>
 </div>
