--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -11,6 +11,6 @@
     class="justify-content-center"
     [totalItems]="news.length"
     [itemsPerPage]="3"
-    (pageChanged)="pageChanged($event)"
+    (pageChanged)="newsPageChanged($event)"
   ></pagination>
 </div>
