Add text indentation and justification

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,7 +7,7 @@
     </caption>
     <span class="row">
       <img class="col-3" />
-      <p class="col-9">
+      <p class="col-9 text-justify">
         Lucas ipsum dolor sit amet rattataki fett ferroans dorvalla chistori
         caedus skakoan amanin dormé jinn. Ryn jango twi'lek shaddaa vestara
         yowza chewbacca. Droid charal kurtzen cato nal triclops. Jacen stass
@@ -33,7 +33,7 @@
       WICEPREZES ZARZĄDU
     </caption>
     <span class="row">
-      <p class="col-9">
+      <p class="col-9 text-justify">
         Mandalore huk winter san kalee letaki. P'w'eck bothawui amidala amidala
         owen taun whill. Elrood corellia bertroff celegian mandell letaki. Rex
         ben x1 darth darth jinn. Quadrinaros quermian glymphid nunb grodin.
@@ -61,7 +61,7 @@
     </caption>
     <span class="row">
       <img class="col-3" />
-      <p class="col-9">
+      <p class="col-9 text-justify">
         Baba golda saché selonian quadrinaros sidious endor dexter. Offee ev-9d9
         gunray nunb desann til onimi tagge yané. Klatooinian snivvian pellaeon
         sikan kenobi padmé asajj togorian. Sy lando c-3p0 selkath iridonian
