Create profile_pics folder and add placeholder pics into it Add profile picture links into about.component.html

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,7 +6,11 @@
       PREZES ZARZĄDU
     </caption>
     <span class="row">
-      <img class="col-3" />
+      <img
+        src="../../assets/img/profile_pics/president.svg"
+        class="col-3"
+        alt="prezes"
+      />
       <p class="col-9 text-justify">
         Lucas ipsum dolor sit amet rattataki fett ferroans dorvalla chistori
         caedus skakoan amanin dormé jinn. Ryn jango twi'lek shaddaa vestara
@@ -50,7 +54,11 @@
         hoojib calrissian wicket maximilian mygeeto hutt moff. Pau'an roos
         mothma droopy. Chistori ben depa kitonak fey'lya.
       </p>
-      <img class="col-3" />
+      <img
+        src="../../assets/img/profile_pics/vice_president.svg"
+        class="col-3"
+        alt="wiceprezes"
+      />
     </span>
     <hr />
   </article>
@@ -60,7 +68,11 @@
       SEKRETARZ
     </caption>
     <span class="row">
-      <img class="col-3" />
+      <img
+        src="../../assets/img/profile_pics/secretary.svg"
+        class="col-3"
+        alt="sekretarz"
+      />
       <p class="col-9 text-justify">
         Baba golda saché selonian quadrinaros sidious endor dexter. Offee ev-9d9
         gunray nunb desann til onimi tagge yané. Klatooinian snivvian pellaeon
