Add classes to regulations.component.html

--- a/src/app/regulations/regulations.component.html
+++ b/src/app/regulations/regulations.component.html
@@ -1,8 +1,10 @@
-<article>
-  <h1>REGULAMIN SERWISU INTERNETOWEGO FUNDACJI JAKU</h1>
-  <section>
-    <h3>I. Postanowienia ogólne</h3>
-    <p>
+<section class="container p-5">
+  <h2 class="row pb-4 justify-content-center">
+    REGULAMIN SERWISU INTERNETOWEGO FUNDACJI JAKU
+  </h2>
+  <article class="col">
+    <h3 class="pb-3">I. Postanowienia ogólne</h3>
+    <p class="text-justify">
       Lucas ipsum dolor sit amet greedo jabba bespin darth hutt jinn ponda
       palpatine owen windu. Darth solo tusken raider darth antilles. Mon solo
       mara solo jango gamorrean darth. Darth moff hutt yoda wedge. Jawa dooku
@@ -29,10 +31,11 @@
         wsparcie działalności Fundacji poprzez dokonanie płatności online;
       </li>
     </ul>
-  </section>
-  <section>
-    <h3>II. Postanowienia ogólne</h3>
-    <p>
+    <hr />
+  </article>
+  <article class="col">
+    <h3 class="pb-3">II. Postanowienia ogólne</h3>
+    <p class="text-justify">
       Mon kit tatooine tusken raider kessel. Skywalker hutt ben binks moff.
       Darth organa dantooine organa qui-gonn darth darth. Aayla amidala maul
       calamari organa skywalker binks moff wampa. Thrawn droid vader kessel
@@ -42,7 +45,7 @@
       anakin qui-gon luke windu organa solo. Dantooine jar watto binks hutt
       zabrak.
     </p>
-    <p>
+    <p class="text-justify">
       R2-d2 solo leia watto. Sith solo padmé yoda. Mon padmé antilles windu
       dantooine mothma mandalore sidious boba. Moff antilles windu maul solo
       antilles ben utapau k-3po. Darth padmé vader binks antilles. Obi-wan lando
@@ -64,10 +67,11 @@
         wsparcie działalności Fundacji poprzez dokonanie płatności online;
       </li>
     </ul>
-  </section>
-  <section>
-    <h3>III. Postanowienia ogólne</h3>
-    <p>
+    <hr />
+  </article>
+  <article class="col">
+    <h3 class="pb-3">III. Postanowienia ogólne</h3>
+    <p class="text-justify">
       K-3po darth coruscant sith kenobi naboo tatooine. Biggs sith lars jar
       amidala mara obi-wan yoda. Boba antilles kenobi leia c-3p0 cade ahsoka
       darth watto. Sith yavin wookiee calrissian gonk twi'lek sidious hutt.
@@ -77,7 +81,7 @@
       qui-gon calamari moff thrawn. Dantooine solo r2-d2 yoda fett moff
       palpatine.
     </p>
-    <p>
+    <p class="text-justify">
       Obi-wan bothan r2-d2 anakin anakin jade. Ben sith r2-d2 darth antilles
       mustafar boba skywalker. Kamino darth grievous mace dooku leia organa.
       Leia mothma jango yavin. Kessel solo mandalorians ben wedge tatooine jade
@@ -99,5 +103,6 @@
         wsparcie działalności Fundacji poprzez dokonanie płatności online;
       </li>
     </ul>
-  </section>
-</article>
+    <hr />
+  </article>
+</section>
