--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,43 @@
-<p>
-  contact works!
-</p>
-<div>
+<section class="w-75" id="company-informations">
+  <p>FUNDACJA JAKU - EDUKACJA, WSPARCIE I ROZWÓJ</p>
+
+  <p>
+    <img class="icon" src="../../assets/img/icons/address.svg" alt="icon" />
+    <span class="category">Adres: </span> Na Kozłówce 5 / 35, 30-631 Kraków,
+    Polska
+  </p>
+
+  <p>
+    <img class="icon" src="../../assets/img/icons/phone.svg" alt="icon" />
+    <span class="category">Telefon: </span> 696-487-778
+  </p>
+
+  <p>
+    <img class="icon" src="../../assets/img/icons/mail.svg" alt="icon" />
+    <span class="category">E-mail: </span> biuro@jaku.edu.pl
+  </p>
+
+  <p>
+    <img class="icon" src="../../assets/img/icons/fb.svg" alt="icon" />
+    <span class="category">Facebook: </span> facebook.com/jaku.edu
+  </p>
+
+  <p>
+    <img class="icon" src="../../assets/img/icons/checked.svg" alt="icon" />
+    <span class="category">KRS: </span>0000763154
+  </p>
+
+  <p>
+    <img class="icon" src="../../assets/img/icons/checked.svg" alt="icon" />
+    <span class="category">NIP: </span>6793178321
+  </p>
+
+  <p>
+    <img class="icon" src="../../assets/img/icons/checked.svg" alt="icon" />
+    <span class="category">REGON: </span>382117714
+  </p>
+</section>
+
+<div id="contact-form">
   <app-contactform></app-contactform>
 </div>
