--- a/src/app/newspreview/newspreview.component.html
+++ b/src/app/newspreview/newspreview.component.html
@@ -1,3 +1,7 @@
-<p>
-  newspreview works!
-</p>
+<ul *ngFor="let info of news">
+  <li>
+    <h5 class="text-secondary">{{ info.date }}</h5>
+    <h2>{{ info.title }}</h2>
+    <p class="my-4">{{ info.content }}</p>
+  </li>
+</ul>
