Set responsive positioning for contact component

--- a/src/app/contactform/contactform.component.html
+++ b/src/app/contactform/contactform.component.html
@@ -1,5 +1,5 @@
 <form
-  class="w-25 container justify-content-center"
+  class="p-5 container justify-content-center"
   #form="ngForm"
   (ngSubmit)="onSubmit(form.value, form)"
 >
