--- a/src/app/contactform/contactform.component.scss
+++ b/src/app/contactform/contactform.component.scss
@@ -1,5 +1,6 @@
 form {
   padding-bottom: 5%;
+
   input:focus,
   textarea:focus {
     border: 3px solid green;
@@ -16,5 +17,11 @@ form {
   button:disabled {
     cursor: not-allowed;
     pointer-events: all !important;
+  }
+}
+
+@media (max-width: 992px) {
+  form {
+    max-width: 50%;
   }
 }
