Change component arrangment

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="contact d-block d-lg-flex justify-content-between">
+<div class="contact d-block d-lg-flex justify-content-around">
   <section class="p-5" id="company-informations">
     <p>FUNDACJA JAKU - EDUKACJA, WSPARCIE I ROZWÓJ</p>
 
