Implement news preview in carousel mode

--- a/src/app/newspreview/newspreview.component.html
+++ b/src/app/newspreview/newspreview.component.html
@@ -1,7 +1,11 @@
-<ul *ngFor="let info of news">
-  <li>
-    <h5 class="text-secondary">{{ info.date }}</h5>
-    <h2>{{ info.title }}</h2>
-    <p class="my-4">{{ info.content }}</p>
-  </li>
-</ul>
+<carousel>
+  <slide *ngFor="let info of news | slice: 0:3">
+    <div class="text-center p-5 bg-success text-white">
+      <h2>{{ info.title }}</h2>
+      <div class="lead">
+        <p class="text-truncate px-3">{{ info.content }}</p>
+        <a routerLink="/news">..czytaj więcej</a>
+      </div>
+    </div>
+  </slide>
+</carousel>
