Add id to contact form Set gallery images width to 100%

--- a/src/app/contactform/contactform.component.html
+++ b/src/app/contactform/contactform.component.html
@@ -1,4 +1,5 @@
 <form
+  id="contactForm"
   class="p-5 container justify-content-center"
   #form="ngForm"
   (ngSubmit)="onSubmit(form.value, form)"
