--- a/src/app/newspreview/newspreview.component.html
+++ b/src/app/newspreview/newspreview.component.html
@@ -1,9 +1,9 @@
 <carousel>
   <slide *ngFor="let info of news | slice: 0:3">
-    <div class="text-center p-5 bg-success text-white">
-      <h2>{{ info.title }}</h2>
+    <div class="text-center bg-success text-white py-5">
+      <h2 class="pb-3">{{ info.title }}</h2>
       <div class="lead">
-        <p class="text-truncate px-3">{{ info.content }}</p>
+        <p class="news-preview text-truncate">{{ info.content }}</p>
         <a routerLink="/news">..czytaj więcej</a>
       </div>
     </div>
