Add id to routerLink Add pointer cursor to routerLink

--- a/src/app/gallerypreview/gallerypreview.component.html
+++ b/src/app/gallerypreview/gallerypreview.component.html
@@ -2,7 +2,7 @@
   <slide *ngFor="let image of pictures | slice: 0:3">
     <img class="gallery-preview" src="{{ image }}" alt="picture" />
     <div class="carousel-caption d-none d-block">
-      <h5 routerLink="/gallery">..zobacz więcej</h5>
+      <h5 id="linkToGallery" routerLink="/gallery">..zobacz więcej</h5>
     </div>
   </slide>
 </carousel>
