Add id to routerLink in newspreview Add pointer cursor to routerlink in newspreview

--- a/src/app/newspreview/newspreview.component.html
+++ b/src/app/newspreview/newspreview.component.html
@@ -6,7 +6,7 @@
         <p class="news-preview text-justify">
           {{ info.content }}
         </p>
-        <h5 routerLink="/news">..czytaj więcej</h5>
+        <h5 id="linkToNews" routerLink="/news">..czytaj więcej</h5>
       </div>
     </div>
   </slide>
