Style up carousel in aboutpreview component

--- a/src/app/aboutpreview/aboutpreview.component.html
+++ b/src/app/aboutpreview/aboutpreview.component.html
@@ -3,10 +3,10 @@
     <div class="text-center bg-success text-white py-5">
       <h2 class="pb-3">{{ person.name }}</h2>
       <div class="lead">
-        <p class="news-preview text-justify">
+        <p class="about-preview text-justify">
           {{ person.description }}
         </p>
-        <h5 id="linkToNews" routerLink="/news">..czytaj więcej</h5>
+        <h5 id="linkToAbout" routerLink="/news">..czytaj więcej</h5>
       </div>
     </div>
   </slide>
