--- a/src/app/client/footer/footer.component.html
+++ b/src/app/client/footer/footer.component.html
@@ -1,6 +1,6 @@
 <nav class="d-flex justify-content-around">
-  <span routerLink="/regulations">Regulamin</span>
-  <span routerLink="/about">Nasz zespół</span>
-  <span routerLink="/contact">Kontakt</span>
+  <span routerLink="client/regulations">Regulamin</span>
+  <span routerLink="client/about">Nasz zespół</span>
+  <span routerLink="client/contact">Kontakt</span>
   <a href="https://pl-pl.facebook.com/tosamozdjecielindycodziennie/">FB</a>
 </nav>
