--- a/src/app/client/navbar/navbar.component.html
+++ b/src/app/client/navbar/navbar.component.html
@@ -3,11 +3,11 @@
     <img class="w-100" src="../../assets/img/jaku_logo.svg" alt="logo" />
   </a>
 
-  <span class="btn btn-primary m-1" routerLink="/">Główna</span>
-  <span class="btn btn-primary m-1" routerLink="/news">Aktualności</span>
-  <span class="btn btn-primary m-1" routerLink="/about">O nas</span>
-  <span class="btn btn-primary m-1" routerLink="/gallery">Galeria</span>
-  <span class="btn btn-primary m-1" routerLink="/contact">Kontakt</span>
+  <span class="btn btn-primary m-1" routerLink="client/home">Główna</span>
+  <span class="btn btn-primary m-1" routerLink="client/news">Aktualności</span>
+  <span class="btn btn-primary m-1" routerLink="client/about">O nas</span>
+  <span class="btn btn-primary m-1" routerLink="client/gallery">Galeria</span>
+  <span class="btn btn-primary m-1" routerLink="client/contact">Kontakt</span>
 </nav>
 
 <nav class="navbar fixed-top d-flex d-lg-none">
