--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,3 +1,3 @@
-<p>
-  client works!
-</p>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
+<app-footer class="footer fixed-bottom"></app-footer>
