--- a/src/app/admin-panel/login/login.component.html
+++ b/src/app/admin-panel/login/login.component.html
@@ -1,14 +1,16 @@
-<h1 class="header">Hello Admin! Log in...</h1>
 <div class="container">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <form [formGroup]="loginForm">
-        <div class="form-group">
-          <label>Email address</label>
+  <div class="row  justify-content-center">
+    <h1 class="header text-white">ADMIN PANEL</h1>
+  </div>
+  <div class="row justify-content-center p-4">
+    <div class="col col-6 card p-4">
+      <form class="container" [formGroup]="loginForm">
+        <div class="row form-group">
+          <label>Adres e-mail</label>
           <input type="email" formControlName="email" class="form-control" />
         </div>
-        <div class="form-group">
-          <label>Password</label>
+        <div class="row form-group">
+          <label>Hasło</label>
           <input
             type="password"
             class="form-control"
@@ -16,13 +18,15 @@
           />
           <label class="error">{{ errorMessage }}</label>
         </div>
-        <button
-          type="submit"
-          (click)="tryLogin(loginForm.value)"
-          class="btn btn-default"
-        >
-          Login
-        </button>
+        <div class="row justify-content-center">
+          <button
+            type="submit"
+            (click)="tryLogin(loginForm.value)"
+            class="btn btn-primary"
+          >
+            ZALOGUJ
+          </button>
+        </div>
       </form>
     </div>
   </div>
