--- a/src/app/admin-panel/login/login.component.html
+++ b/src/app/admin-panel/login/login.component.html
@@ -1,5 +1,8 @@
-<div class="container">
-  <div class="row  justify-content-center">
+<div id="loginContainer" class="container">
+  <div class="row justify-content-center">
+    <img class="w-50" src="../../assets/img/jaku_logo.svg" alt="logo" />
+  </div>
+  <div class="row justify-content-center">
     <h1 class="header text-white">ADMIN PANEL</h1>
   </div>
   <div class="row justify-content-center p-4">
