Change errorMessage reference to message Change label field to alert with type of danger showed only when string is not empty

--- a/src/app/admin-panel/login/login.component.html
+++ b/src/app/admin-panel/login/login.component.html
@@ -19,7 +19,9 @@
             class="form-control"
             formControlName="password"
           />
-          <label class="error">{{ errorMessage }}</label>
+          <alert *ngIf="errorMessage.length != 0" class="error" type="danger">{{
+            errorMessage
+          }}</alert>
         </div>
         <div class="row justify-content-center">
           <button
