--- a/src/app/admin-panel/admin-home/admin-home.component.html
+++ b/src/app/admin-panel/admin-home/admin-home.component.html
@@ -1,3 +1,3 @@
 <app-admin-navbar></app-admin-navbar>
 <router-outlet></router-outlet>
-<app-admin-footer></app-admin-footer>
+<app-admin-footer class="footer fixed-bottom"></app-admin-footer>
