--- a/src/app/admin-panel/admin-home/admin-footer/admin-footer.component.html
+++ b/src/app/admin-panel/admin-home/admin-footer/admin-footer.component.html
@@ -1,1 +1,25 @@
-<nav class="d-flex justify-content-center"></nav>
+<nav id="adminFooter" class="d-flex justify-content-center">
+  <button
+    type="button"
+    class="btn btn-secondary mt-2"
+    (click)="openModal(template)"
+  >
+    SKONTAKTUJ SIĘ Z ADMINISTRATOREM
+  </button>
+  <ng-template #template>
+    <div class="modal-header">
+      <h4 class="modal-title pull-left">Modal</h4>
+      <button
+        type="button"
+        class="close pull-right"
+        aria-label="Close"
+        (click)="modalRef.hide()"
+      >
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      Just a modal with a bunch of words inside, nothing serious.
+    </div>
+  </ng-template>
+</nav>
