Add content to modal window

--- a/src/app/admin-panel/admin-home/admin-footer/admin-footer.component.html
+++ b/src/app/admin-panel/admin-home/admin-footer/admin-footer.component.html
@@ -8,7 +8,7 @@
   </button>
   <ng-template #template>
     <div class="modal-header">
-      <h4 class="modal-title pull-left">Modal</h4>
+      <h4 class="modal-title pull-left">Kontakt do administratora</h4>
       <button
         type="button"
         class="close pull-right"
@@ -19,7 +19,8 @@
       </button>
     </div>
     <div class="modal-body">
-      Just a modal with a bunch of words inside, nothing serious.
+      <div>e-mail: adres@gmail.com</div>
+      <div>telefon: 666-555-444</div>
     </div>
   </ng-template>
 </nav>
