--- a/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
+++ b/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
@@ -1,8 +1,19 @@
-<ul class="mb-5" *ngFor="let info of news">
-  <li>
-    <h5 class="text-secondary">{{ info.date }}</h5>
-    <h2>{{ info.title }}</h2>
-    <p class="my-4">{{ info.content }}</p>
-    <hr />
-  </li>
-</ul>
+<div class="container my-5" *ngFor="let info of news">
+  <div class="row justify-content-around">
+    <span class="col col-10 card">
+      <h5 class="card-title text-secondary mt-3">{{ info.date }}</h5>
+      <h2>{{ info.title }}</h2>
+      <p class="info-card">{{ info.content }}</p>
+      <hr />
+      <span class="row justify-content-around align-items-stop"
+        ><button class="btn btn-primary w-25 mb-3">EDYTUJ</button>
+        <button class="btn">
+          <img
+            src="../../../../assets/img/icons/circle_delete.svg"
+            alt="delete"
+            class="mt-n3"
+          /></button
+      ></span>
+    </span>
+  </div>
+</div>
