Create gallery editor template

--- a/src/app/admin-panel/admin-home/gallery-editor/gallery-editor.component.html
+++ b/src/app/admin-panel/admin-home/gallery-editor/gallery-editor.component.html
@@ -1,3 +1,4 @@
-<p>
-  gallery-editor works!
-</p>
+<h3>Edytor galerii</h3>
+<div *ngFor="let gallery of currentGalleries">
+  <app-subgallery-editor [gallery]="gallery"></app-subgallery-editor>
+</div>
