--- a/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
+++ b/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
@@ -1,19 +1,15 @@
-<div class="container my-5" *ngFor="let info of news">
+<div class="container mt-5" *ngFor="let info of news">
   <div class="row justify-content-around">
     <span class="col col-10 card">
       <h5 class="card-title text-secondary mt-3">{{ info.date }}</h5>
       <h2>{{ info.title }}</h2>
-      <p class="info-card">{{ info.content }}</p>
-      <hr />
+      <p class="info-card text-truncate">{{ info.content }}</p>
       <span class="row justify-content-around align-items-stop"
         ><button class="btn btn-primary w-25 mb-3">EDYTUJ</button>
-        <button class="btn">
-          <img
-            src="../../../../assets/img/icons/circle_delete.svg"
-            alt="delete"
-            class="mt-n3"
-          /></button
-      ></span>
+        <button class="btn btn-danger w-25 mb-3">
+          USUŃ
+        </button></span
+      >
     </span>
   </div>
 </div>
