--- a/src/app/client/navbar/navbar.component.html
+++ b/src/app/client/navbar/navbar.component.html
@@ -3,11 +3,11 @@
     <img class="w-100" src="../../assets/img/jaku_logo.svg" alt="logo" />
   </a>
 
-  <span class="btn btn-primary m-1" routerLink="client/home">Główna</span>
-  <span class="btn btn-primary m-1" routerLink="client/news">Aktualności</span>
-  <span class="btn btn-primary m-1" routerLink="client/about">O nas</span>
-  <span class="btn btn-primary m-1" routerLink="client/gallery">Galeria</span>
-  <span class="btn btn-primary m-1" routerLink="client/contact">Kontakt</span>
+  <span class="btn btn-primary m-1" routerLink="home">Główna</span>
+  <span class="btn btn-primary m-1" routerLink="news">Aktualności</span>
+  <span class="btn btn-primary m-1" routerLink="about">O nas</span>
+  <span class="btn btn-primary m-1" routerLink="gallery">Galeria</span>
+  <span class="btn btn-primary m-1" routerLink="contact">Kontakt</span>
 </nav>
 
 <nav class="navbar fixed-top d-flex d-lg-none">
@@ -34,19 +34,19 @@
       aria-labelledby="button-alignment"
     >
       <li role="menuitem">
-        <a class="dropdown-item" routerLink="/">Główna</a>
+        <a class="dropdown-item" routerLink="home">Główna</a>
       </li>
       <li role="menuitem">
-        <a class="dropdown-item" routerLink="/news">Aktualności</a>
+        <a class="dropdown-item" routerLink="news">Aktualności</a>
       </li>
       <li role="menuitem">
-        <a class="dropdown-item" routerLink="/about">O nas</a>
+        <a class="dropdown-item" routerLink="about">O nas</a>
       </li>
       <li role="menuitem">
-        <a class="dropdown-item" routerLink="/gallery">Galeria</a>
+        <a class="dropdown-item" routerLink="gallery">Galeria</a>
       </li>
       <li role="menuitem">
-        <a class="dropdown-item" routerLink="/contact">Kontakt</a>
+        <a class="dropdown-item" routerLink="contact">Kontakt</a>
       </li>
     </ul>
   </div>
