Add askIfWantsToQuit function

--- a/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
+++ b/src/app/admin-panel/admin-home/news-editor/news-editor.component.html
@@ -6,7 +6,10 @@
       <p class="info-card text-truncate">{{ info.content }}</p>
       <span class="row justify-content-around align-items-stop"
         ><button class="btn btn-primary w-25 mb-3">EDYTUJ</button>
-        <button class="btn btn-danger w-25 mb-3">
+        <button
+          class="btn btn-danger w-25 mb-3"
+          (click)="askIfWantsToQuit(info.title)"
+        >
           USUŃ
         </button></span
       >
