--- a/src/app/admin-panel/admin-home/gallery-editor/subgallery-editor/subgallery-editor.component.html
+++ b/src/app/admin-panel/admin-home/gallery-editor/subgallery-editor/subgallery-editor.component.html
@@ -12,7 +12,7 @@
       src="../../../../../assets/img/icons/circle_delete.svg"
       alt="delete_icon"
       id="delete_icon"
-      (click)="deleteImage([picture])"
+      (click)="deleteImage(picture, imageTitles[i])"
     />
   </div>
 </div>
